fixed font uneven and added animation to radar

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,7 +1,6 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300,700,800|Roboto+Slab:400,100,300,700);
 
 body {
-    font-family: "Roboto Slab", sans-serif ;
     min-width: 760px;
 }
 #line_header{
